# Scripts

./: .gitignore  README.md
automation_tool/DecrypMessage/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
automation_tool/DecrypMessage/decrypt/: main.py
automation_tool/DefaultInstall/: README.md  setup.ps1
automation_tool/github_themes/: README.md  github_theme.py
cli/SteamCLI/: README.md  pyproject.toml
cli/SteamCLI/steamcli/: cli.py  config.py  launcher.py  steam_scanner.py  ui.py
web/GeminiChatLoad/: GeminiChatLoad.js  README.md
