[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decrypmessage"
version = "0.1.0"
description = "CLI tool for deciphering internet abbreviations using Gemini API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai",
    "pydantic-settings",
    "tenacity"
]

[project.scripts]
decryp = "main:main"