[project]
name = "steamcli"
version = "1.0.0"
description = "CLI-утилита для запуска игр Steam из консоли по имени."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]

[project.scripts]
steamcli = "steamcli.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["steamcli*"]