[project]
name = "steamcli"
version = "1.0.0"
description = "CLI utility for launching Steam games from the console by name."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]

[project.scripts]
steamcli = "steamcli.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["steamcli*"]